# vulkan_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  demo.cpp
VRE/: CMakeLists.txt  VRE.sln  VRE.vcxproj  VRE.vcxproj.filters  main.cpp
VRE/engine/Core/include/: Application.h  Singleton.h  Window.h
VRE/engine/Core/src/: Application.cpp  Window.cpp
VRE/engine/Renderer/core/include/: RenderApi.h  Renderer.h
VRE/engine/Renderer/core/src/: Renderer.cpp
VRE/engine/Renderer/include/: Renderer.h  VulkanRenderApi.h  VulkanVertexBuffer.h
VRE/engine/Renderer/resources/shaders/: triangleShader.slang
VRE/engine/Renderer/src/: Renderer.cpp  VulkanRenderApi.cpp  VulkanVertexBuffer.cpp
VRE/engine/Utils/include/: FileReader.h
VRE/engine/Utils/src/: FileReader.cpp
VRE/src/Core/: Application.cpp  Application.h  Singleton.h  Window.cpp  Window.h
VRE/src/Renderer/: Renderer.cpp  Renderer.h  VulkanRenderApi.cpp  VulkanRenderApi.h
